deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-deployment
spec:
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
        - name: echo-container
          image: registry.cluster.wik.cloud/public/echo
          ports:
            - containerPort: 3000 # Remplacer par le port sur lequel votre API écoute
